# HomeAssistantAPI

./: .coverage  .gitignore  .pylintrc  .readthedocs.yaml  Makefile  README.md  ha_package_installer_sample.bat  mypy.ini  pyproject.toml  requirements.txt  rtd_requirements.txt  setup.cfg
.github/workflows/: lint_and_test.yml  pylint.yml
docs/: requirements.txt
docs/source/: conf.py  data-models.md  documentation.md  faq.md  file-overview.md  flow.md  index.md  keywords.md  notes.md  overview.md  setting-up.md  testing.md
docs/source/data-models/: data-examples.md
docs/source/documentation/: api-package-documentation.md  api-package-example.md  api-package.md  automations-documentation.md  class-diagram.md  config-flow-documentation.md  integration-documentation.md  platforms-documentation.md
docs/source/documentation/api-package-documentation/: client.md  exceptions.md  types.md  utils.md  websocket.md
docs/source/documentation/integration-documentation/: config_flow.md  entity.md  init.md  sensor.md  switch.md
docs/source/file-overview/: api-package-overview.md  integration-overview.md
docs/source/flow/: data-flow.md  flow.md  integration-flow.md  on-data.md  platform.md
docs/source/overview/: file-overview.md
docs/source/setting-up/: api-package-setup.md  integration-setup.md  setup-api-package.md  setup-integration.md
docs/source/testing/: api-package-testing.md  integration-testing.md
src/bluecurrent_api/: client.py  errors.py  exceptions.py  types.py  utils.py  websocket.py
tests/: test_client.py  test_utils.py  test_websocket.py
