[metadata]
name = bluecurrent-api
version = 1.0.0
author = Floris272
author_email = florispuijk@outlook.com
description = A wrapper for the blue current api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    websockets>=10.0 
    asyncio>=3.4.3

[options.packages.find]
where = src